Pronto para deploy

--- a/src/app/components/views/colaborador/colaborador-read/colaborador-read.component.css
+++ b/src/app/components/views/colaborador/colaborador-read/colaborador-read.component.css
@@ -32,7 +32,7 @@ button{
     width: 5rem;
 }
 .alimentos{
-    margin-left: 1.3rem
+    margin-right: 1rem
     ;
-    color: rgb(126, 74, 7);
+
 }
