--- a/src/app/components/template/nav/nav.component.html
+++ b/src/app/components/template/nav/nav.component.html
@@ -9,7 +9,7 @@
     <i class="material-icons">account_box</i>
     Inscrição
 </a>
-<a routerLink="/colaborador/colaboradores" mat-list-item>
+<a routerLink="/colaborador/all" mat-list-item>
     <i class="material-icons">check_circle</i>
     Colaboradores inscritos
 </a>
