--- a/src/app/components/views/colaborador/colaborador-read-all/colaborador-read-all.component.html
+++ b/src/app/components/views/colaborador/colaborador-read-all/colaborador-read-all.component.html
@@ -1,37 +1,34 @@
 <div class="content">
-    <div class="title">
-      <h1>Colaboradores Inscritos</h1>
-    </div>
-  
-    <div class="mat-elevation-z8 content-table">
-      <table class="table" mat-table [dataSource]="colaboradores" >
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let row">{{ row.id }}</td>
-        </ng-container>
-  
-        <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef>NOME</th>
-          <td mat-cell *matCellDef="let row">{{ row.nome }}</td>
-        </ng-container>
-  
-        <ng-container matColumnDef="cpf">
-          <th mat-header-cell *matHeaderCellDef>CPF</th>
-          <td mat-cell *matCellDef="let row">{{ row.cpf }}</td>
-        </ng-container>
-  
-        <ng-container matColumnDef="alimentos">
-          <th mat-header-cell *matHeaderCellDef>ALIMENTOS</th>
-          <td mat-cell *matCellDef="let row">
-            <a class="alimentos" >
-              <i class="material-icons">{{row.alimento}}</i>
-            </a>
-          </td>
-        </ng-container>
+  <div class="title">Colaboradores Inscritos</div>
 
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-    </div>
+  <div class="mat-elevation-z8 content-table">
+    <table class="table" mat-table [dataSource]="colaboradores">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef>NOME</th>
+        <td mat-cell *matCellDef="let row">{{ row.nome }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="cpf">
+        <th mat-header-cell *matHeaderCellDef>CPF</th>
+        <td mat-cell *matCellDef="let row">{{ row.cpf }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="alimentos">
+        <th mat-header-cell *matHeaderCellDef>ALIMENTOS</th>
+
+        <td mat-cell *matCellDef="let row">
+          {{ row.alimentos[0].nome }}
+
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
   </div>
+</div>
