--- a/src/app/components/views/colaborador/colaborador-read/colaborador-read.component.html
+++ b/src/app/components/views/colaborador/colaborador-read/colaborador-read.component.html
@@ -1,8 +1,5 @@
-
 <div class="content">
-  <div class="title">
-    
-  </div>
+  <div class="title"></div>
 
   <button
     class="mat-elevation-z8"
@@ -31,14 +28,17 @@
       </ng-container>
 
       <ng-container matColumnDef="alimentos">
-        <th mat-header-cell *matHeaderCellDef>ALIMENTOS</th>
+        <th mat-header-cell *matHeaderCellDef>ADICIONAR ALIMENTOS</th>
         <td mat-cell *matCellDef="let row">
           <a class="alimentos" routerLink="{{ row.id }}/alimento">
-            <i class="material-icons">group_work</i>
+            <button
+              class="mat-elevation-z8"
+              mat-stroked-button
+              color="primary"
+            >NOVO ALIMENTO</button>
           </a>
         </td>
       </ng-container>
-
       <ng-container matColumnDef="acoes">
         <th class="mat-header" mat-header-cell *matHeaderCellDef>AÇÕES</th>
         <td mat-cell *matCellDef="let row">
