--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,4 +1,11 @@
-<mat-card class="home mat-elevation-z4" >
-    <mat-card-title class="title">Bem vindos!</mat-card-title>
-    <mat-card-subtitle class="subtitle">Sistema para inscrição no café da manhã do Grupo WL</mat-card-subtitle>
-    </mat-card>
+<mat-card class="home mat-elevation-z4">
+  <mat-card-title class="title">Bem vindos!</mat-card-title>
+  <mat-card-subtitle class="subtitle"
+    >Sistema para inscrição no café da manhã do Grupo WL</mat-card-subtitle
+  >
+</mat-card>
+
+<span>
+  <img src="assets/img/cafe-da-manha.jpg" alt="" />
+</span>
+<span></span>
