Pronto para deploy

--- a/src/app/components/views/alimento/alimento-read-all/alimento-read-all.component.html
+++ b/src/app/components/views/alimento/alimento-read-all/alimento-read-all.component.html
@@ -1,6 +1,6 @@
 <div class="content">
   <div class="title">
-    <h1>Lista dos Alimentos </h1>
+    <h1>Seus alimentos </h1>
   </div>
 
   <button
