--- a/src/app/components/views/colaborador/colaborador-read-all/colaborador-read-all.component.html
+++ b/src/app/components/views/colaborador/colaborador-read-all/colaborador-read-all.component.html
@@ -20,10 +20,8 @@
 
       <ng-container matColumnDef="alimentos">
         <th mat-header-cell *matHeaderCellDef>ALIMENTOS</th>
-
         <td mat-cell *matCellDef="let row">
-          {{ row.alimentos[0].nome }}
-
+          {{ row.alimentos }}
         </td>
       </ng-container>
 
