--- a/src/app/components/views/colaborador/colaborador-read/colaborador-read.component.html
+++ b/src/app/components/views/colaborador/colaborador-read/colaborador-read.component.html
@@ -35,7 +35,7 @@
               class="mat-elevation-z8"
               mat-stroked-button
               color="primary"
-            >NOVO ALIMENTO</button>
+            >CADASTRAR</button>
           </a>
         </td>
       </ng-container>
